# straw-lang-interpreter

./: README.md  TODO.md  array_testing.straw  dune-project  fstring_test.straw  mytest.straw  random_testing.straw  stdlib_testing.straw  test_ast.straw  test_enums.straw  test_ifs.straw  test_input.dlang  test_input.straw  test_nested_func.straw  test_structs.straw
doc/: introduction.md
examples/: array_loop.straw  arrays.straw  arrays2.straw  char_and_string.straw  closure.straw  combined_closure.straw  combined_test.straw  enum_use.straw  factorial.straw  prime.straw  struct_basic.straw
examples/random_tests/: stdlib_testing.straw  test_ast.straw  test_input.straw
lib/: ast.ml  dbg_prints.ml  dune  exceptions.ml  interpret_types.ml  interpreter.ml  lexer.ml  lexing_types.ml  parser.ml  semantic.ml  semantic_types.ml  stdlib.ml
test/: dune
