(lang dune 3.23)

(name straw-lang-interpreter)

(generate_opam_files true)

(source
 (github straws11/straw-lang-interpreter))

(authors "Dylan Swarts <dswarts11@gmail.com>")

(maintainers "Dylan Swarts <dswarts11@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name straw-lang-interpreter)
 (synopsis "Interpreter for StrawLang")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
